mod : fixing overflow contact buttons on phone

--- a/style.css
+++ b/style.css
@@ -623,9 +623,6 @@ h5 {
 .w-64 {
   width: 16rem;
 }
-.w-96 {
-  width: 24rem;
-}
 .w-full {
   width: 100%;
 }
@@ -797,6 +794,10 @@ h5 {
 }
 .p-2 {
   padding: 0.5rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -971,6 +972,10 @@ h5 {
     max-height: 100%;
   }
 
+  .lg\:w-96 {
+    width: 24rem;
+  }
+
   .lg\:max-w-full {
     max-width: 100%;
   }
@@ -1007,11 +1012,6 @@ h5 {
     justify-self: center;
   }
 
-  .lg\:px-1 {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-  }
-
   .lg\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
@@ -1020,11 +1020,6 @@ h5 {
   .lg\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-
-  .lg\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
   }
 
   .lg\:py-4 {
